# multi_agent

./: Streamlit_App.py  agents.py  crew.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  tasks.py  tools.py
agents/: research_agent.py  resource_agent.py  use_case_agent.py
app/: main.py
app/agents/: research_agent.py  resource_agent.py  use_case_agent.py
