[tool.poetry]
name = "market-research-assistant"
version = "0.1.0"
description = "A Streamlit-based market research assistant"
authors = ["Anonymous <anonymous@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.13.0"
pydantic = "^2.4.2"
langchain = "^0.1.10"
regex = "^2023.12.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

