[tool.poetry]
name = "market-research-assistant"
version = "0.1.0"
description = "A Streamlit app for market research using AI agents."
authors = ["Your Name <your-email@example.com>"] # Replace with a placeholder if necessary
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.26.0"
langchain = "^0.0.300"
beautifulsoup4 = "^4.12.2"
openai = "^0.27.8"
transformers = "^4.35.0"
scikit-learn = "^1.3.1"
numpy = "^1.24.3"
pandas = "^2.1.2"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"
